changes in login page

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,137 +1,149 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="fill_parent"
-    android:background="@drawable/background1">
+    android:background="@drawable/background1"
+    android:orientation="vertical">
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight=".1">
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="fill_parent"
-        android:layout_height="match_parent"
+        android:layout_height="fill_parent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:orientation="vertical"
         android:weightSum="1">
 
         <ImageView
+            android:id="@+id/imageView"
             android:layout_width="260dp"
             android:layout_height="70dp"
-            android:id="@+id/imageView"
-            android:padding="10dp"
-            android:src="@drawable/logo"
-            android:layout_gravity="center_horizontal"
             android:layout_below="@+id/linearLayout"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="@dimen/top_margin" />
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/top_margin"
+            android:padding="10dp"
+            android:src="@drawable/logo" />
 
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="30dp"
             android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp">
+            android:layout_marginRight="20dp"
+            android:layout_marginTop="30dp">
 
             <EditText
+                android:id="@+id/editText"
                 android:layout_width="match_parent"
-                android:layout_height="fill_parent"
-                android:hint="Enter User ID"
-                android:paddingLeft="60dp"
+                android:layout_height="50dp"
                 android:layout_centerHorizontal="true"
                 android:background="@drawable/edittext_shape"
-                android:id="@+id/editText" />
+                android:hint="Enter User ID"
+                android:lines="1"
+
+                android:inputType="text"
+                android:paddingLeft="60dp">
+                <requestFocus />
+            </EditText>
 
             <ImageView
+                android:id="@+id/imageView2"
                 android:layout_width="50dp"
                 android:layout_height="match_parent"
-                android:id="@+id/imageView2"
-                android:padding="10dp"
-                android:src="@drawable/user"
+                android:layout_gravity="left|top"
                 android:background="@drawable/edittext_img"
-                android:layout_gravity="left|top" />
+                android:padding="10dp"
+                android:src="@drawable/user" />
         </FrameLayout>
 
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:layout_marginTop="15dp"
+            android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:layout_centerHorizontal="true">
+            android:layout_marginTop="15dp">
 
             <EditText
+                android:id="@+id/editText2"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
+                android:layout_centerHorizontal="true"
                 android:background="@drawable/edittext_shape"
-                android:paddingLeft="60dp"
                 android:hint="********"
                 android:inputType="textPassword"
-                android:layout_centerHorizontal="true"
-                android:id="@+id/editText2" />
+
+                android:paddingLeft="60dp" >
+                <requestFocus />
+            </EditText>
 
             <ImageView
+                android:id="@+id/imageView3"
                 android:layout_width="50dp"
                 android:layout_height="match_parent"
-                android:id="@+id/imageView3"
-                android:padding="10dp"
-                android:src="@drawable/pass"
+                android:layout_gravity="left|top"
                 android:background="@drawable/edittext_img"
-                android:layout_gravity="left|top" />
+                android:padding="10dp"
+                android:src="@drawable/pass" />
         </FrameLayout>
 
         <CheckBox
+            android:id="@+id/checkBox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Remember Me"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="23dp"
-            android:id="@+id/checkBox"
-            android:visibility="gone"
-            android:layout_gravity="center_horizontal" />
+            android:text="Remember Me"
+            android:visibility="gone" />
 
         <Button
+            android:id="@+id/button"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:text="Log In"
-            android:background="@drawable/button_shape"
-            android:layout_marginTop="20dp"
+            android:layout_gravity="center_vertical"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:layout_gravity="center_vertical"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/button_shape"
             android:gravity="center"
-            android:textStyle="bold"
+            android:text="Log In"
             android:textColor="#ffffff"
-            android:id="@+id/button" />
+            android:textStyle="bold" />
     </LinearLayout>
-
-
-
+    </ScrollView>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="#80b3b3b3"
+        android:layout_height="match_parent"
         android:layout_alignParentBottom="true"
-        android:orientation="vertical"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true"
+        android:background="#80b3b3b3"
+        android:layout_weight=".9"
+        android:orientation="vertical">
 
 
         <TextView
+            android:id="@+id/textView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="8dp"
             android:text="Powered by Verve Digital"
-            android:id="@+id/textView1"
-            android:textStyle="bold"
-            android:layout_gravity="center_horizontal"/>
+            android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/textView14"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="All copyrights reserved with Verve Digital"
-            android:id="@+id/textView14"
+            android:layout_gravity="center_horizontal"
             android:layout_marginBottom="5dp"
-            android:layout_gravity="center_horizontal"/>
+            android:text="All copyrights reserved with Verve Digital" />
     </LinearLayout>
 
-</RelativeLayout>
+</LinearLayout>
